docs: Добавлено описание остальных переменных набора данных

--- a/models/default_of_credit_card_clients_dataset.ipynb
+++ b/models/default_of_credit_card_clients_dataset.ipynb
@@ -56,14 +56,41 @@
    "source": [
     "# 2. Исследовательский анализ данных (EDA)\n",
     "## 2.1 Описание набора данных\n",
-    "Мы будем проводить свое исследование на наборе данных [Default of Credit Card Clients Dataset](https://www.kaggle.com/datasets/uciml/default-of-credit-card-clients-dataset) с сайта [kaggle](https://www.kaggle.com/). Он содержит данные наблюдений, собранных банком на Тайване по пользователям кредитных карт в период с апреля по сентябрь 2005 года. В качестве целевой переменной в наборе используется бинарная переменная `default.payment.next.month`. Она указывает, допустит ли владелец карты дефолт в следующем месяце. Далее в качестве объясняющих переменных используются следующие 23 признака:\n",
+    "Я буду проводить свое исследование на наборе данных [Default of Credit Card Clients Dataset](https://www.kaggle.com/datasets/uciml/default-of-credit-card-clients-dataset) с сайта [kaggle](https://www.kaggle.com/). Он содержит данные наблюдений, собранных банком на Тайване по пользователям кредитных карт в период с апреля по сентябрь 2005 года. В качестве целевой переменной в наборе используется бинарная переменная `default.payment.next.month`. Она указывает, допустит ли владелец карты дефолт в следующем месяце. Далее в качестве объясняющих переменных используются следующие 23 признака:\n",
     "\n",
     "* Личная информация клиента:\n",
     "    * `LIMIT_BAL` - сумма предоставленного кредитного лимита (в новых тайваньских долларах - NT$).\n",
     "    * `SEX` - пол: 1 - мужской, 2 - женский.\n",
     "    * `EDUCATION` - образование: 1 - магистратура/аспирантура, 2 - университет, 3 - средняя школа, 4 - другое, 5 и 6 - неизвестно.\n",
     "    * `MARRIAGE` - семейное положение: 1 - женат/замужем, 2 - холост/не замужем, 3 - другое.\n",
-    "    * `AGE` - возраст (лет)."
+    "    * `AGE` - возраст (лет).\n",
+    "* Информация о статусах погашения платежей:\n",
+    "    * `PAY_0` - статус погашения в сентябре 2005г.\n",
+    "    * `PAY_2` - статус погашения в августе 2005г.\n",
+    "    * `PAY_3` - статус погашения в июле 2005г.\n",
+    "    * `PAY_4` - статус погашения в июне 2005г.\n",
+    "    * `PAY_5` - статус погашения в мае 2005г.\n",
+    "    * `PAY_6` - статус погашения в апреле 2005г.\n",
+    "\n",
+    "> Набор данных содержит следующие статусов: -1 - своевременная оплата, 1 - задержка платежа на один месяц, 2 - задержка платежа на два месяца, ..., 8 - задержка платежа на восемь месяцев, 9 - задержка платежа на девять и более месяцев.\n",
+    "\n",
+    "* Информация о балансовых остатках:\n",
+    "    * `BILL_AMT1` - остаток по счету за сентябрь 2005г.\n",
+    "    * `BILL_AMT2` - остаток по счету за август 2005г.\n",
+    "    * `BILL_AMT3` - остаток по счету за июль 2005г.\n",
+    "    * `BILL_AMT4` - остаток по счету за июнь 2005г.\n",
+    "    * `BILL_AMT5` - остаток по счету за май 2005г.\n",
+    "    * `BILL_AMT6` - остаток по счету за апрель 2005г.\n",
+    "\n",
+    "* Информация о сумме предыдущего платежа:\n",
+    "    * `PAY_AMT1` - сумма предыдущего платежа в сентябре 2005 г.\n",
+    "    * `PAY_AMT2` - сумма предыдущего платежа в августе 2005 г.\n",
+    "    * `PAY_AMT3` - сумма предыдущего платежа в июле 2005 г.\n",
+    "    * `PAY_AMT4` - сумма предыдущего платежа в июне 2005 г.\n",
+    "    * `PAY_AMT5` - сумма предыдущего платежа в мае 2005 г.\n",
+    "    * `PAY_AMT6` - сумма предыдущего платежа в апреле 2005 г.\n",
+    "\n",
+    "Ниже представлен пример того как выглядит набор данных. Сразу для удобства переименуем переменную `default.payment.next.month` в `DEAFULT`, а переменную `PAY_0` в `PAY_1` и приведем все наименования столбцов к верхнему регистру."
    ],
    "id": "b245cec86be3750a"
   },
